--- a/registration.html
+++ b/registration.html
@@ -316,17 +316,17 @@
                       that the registrant and i will abide by all the rules of
                       the Mighty Ducks Hockey League (MDHL). In recognizing the
                       possibility of physical injury associated with hockey and
-                      in consideration for the "League" acceting the registrant
-                      for its hockey programs and activities, I herebry release,
+                      in consideration for the "League" accreting the registrant
+                      for its hockey programs and activities, I here bry release,
                       discharge, and/or otherwise indemnify MDHL, their
-                      employees and associated personnel and voluteers,
+                      employees and associated personnel and volunteers,
                       including the facilities used for practices and games,
                       against any claim by or on behalf of the registrant as a
                       result of the registrant's participation in the
                       programand/orbeing transported to or from MDHL sponsored
                       activities,which transportation<br ><br >
-                      By signing below, I herebyagree andauthorizethe above.In
-                      addition, by signing below, lalso<br >
+                      By entering your name below, I here by agree and authorize the above. In
+                      addition, by signing below, l also
                       acknowledge that I have read the cancellation policy and
                       agree to its terms.
                     </p>
